kubernetes/objects/kafka/kafka-topics-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-topics-ui
  namespace: kafka
  labels:
    app: kafka-topics-ui
    service: kafka-topics-ui
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: kafka-topics-ui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-topics-ui
  namespace: kafka
spec:
  template:
    metadata:
      labels:
        app: kafka-topics-ui
    spec:
      containers:
      - name: kafka-topics-ui
        image: landoop/kafka-topics-ui
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-topics-ui
  namespace: kafka
spec:
  hosts:
  - kafka.tenlastic.com
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  http:
  - route:
    - destination:
        host: kafka-topics-ui
        port:
          number: 8000
